--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
 </head>
 <body>
 
+        <section>
 
+            <span class="logo">Manage your expenses</span>
+
+        </section>
+
+        <section>
+
+            <div class="input-section">
+                <input type="text" class="input-item thing-input"/>
+                <input type="number" class="input-item amount-input"/>
+                <input type="date" class="input-item date-input"/>
+            </div>
+
+            <div class="table-section">
+                <div class="table-elements thing-text">thing</div>
+                <div class="table-elements amount-text">amount</div>
+                <div class="table-elements date-text">date</div>
+            </div>
+
+            <div class="user-section">
+                <div class="user-content thing-content"></div>
+                <div class="user-content amount-content"></div>
+                <div class="user-content date-content"></div>
+            </div>
+
+        </section>
 
     <script src="main.js"></script>
 
