not completed js script

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <section>
 
             <div class="input-section">
-                <input type="text" class="input-item thing-input"/>
-                <input type="number" class="input-item amount-input"/>
+                <input type="text" class="input-item thing-input" placeholder="thing"/>
+                <input type="number" class="input-item amount-input" placeholder="amount"/>
                 <input type="date" class="input-item date-input"/>
+
+                <input type="submit" class="submit"/>
             </div>
 
             <div class="table-section">
@@ -32,9 +34,7 @@
             </div>
 
             <div class="user-section">
-                <div class="user-content thing-content"></div>
-                <div class="user-content amount-content"></div>
-                <div class="user-content date-content"></div>
+
             </div>
 
         </section>
