--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <section>
 
             <div class="input-section">
-                <input type="text" class="input-item thing-input" placeholder="thing"/>
-                <input type="number" class="input-item amount-input" placeholder="amount"/>
+                <input type="text" class="input-item thing-input" placeholder="thing" maxlength="16"/>
+                <input type="number" class="input-item amount-input" placeholder="amount" maxlength="9"/>
                 <input type="date" class="input-item date-input"/>
 
                 <input type="submit" class="submit"/>
